--- a/Task4.html
+++ b/Task4.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="table.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BombaBloodcat</title>
+    <title>Table</title>
     
 </head>
 <body>
