--- a/mitch.html
+++ b/mitch.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="mitch.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <h1>My Self</h1>
+    <img src="614695825_874459378805816_6807669067684847192_n.jpg" style="height:150px; width:150px"
+    <br><br>
+    <h2>My name is Mitch, im a Sweet Gurl</h2>
+    <p>I am a first year bio student, my favorite color is Blue.</p>
+    <p>I love swimming</p>
+    <h2>My Hobbies</h2>
+        <ul>
+            <li>Cooking</li>
+            <li>Cleaning</li>
+            <li>Swimming</li>
+            <li>Watching Movies</li>
+            <li>Spending dad's money</li>
+        </ul>
+    <h2>My Skills</h2>
+         <ul>
+            <li>Design</li>
+            <li>Organize</li>
+            <li>Carpentry</li>
+            <li>Detective work</li>
+        </ul>
+    <h2>My Quote</h2>
+    <p>"Wag tipirin ang pagkain para hindi gugutumin"</p>
+
 </body>
 </html>
