--- a/task2.html
+++ b/task2.html
@@ -9,7 +9,7 @@
     <h1>Biography</h1>
     <img src="600450505_3474655756008439_848153007572342106_n.jpg" style="height:150px; width:150px"
     <br>
-    <h2>Hello!, my nameis Dexter Louie Pamittan</h2>
+    <h2>Hello!, my name is Dexter Louie Pamittan</h2>
     <p>I am a computer science student that is currently enrolled in the University of Mindanao.</p>
     <h2>These are my Hobbies!</h2>
     <ul>
@@ -28,6 +28,7 @@
     </ul>
     <h2>Favorite Quotes</h2>
     <p>"memento mori"</p>
+    <p>“It’s going to be legen—wait for it—dary.”</p>
 
     <h2>Link To my Github</h2>
     <a href="https://github.com/dexterPamittan23" target="_blank">Visit my account</a>
