--- a/task3.html
+++ b/task3.html
@@ -24,16 +24,15 @@
             <li>Scream the top of my lungs, "Whats going on"</li>
         </ol>
     <h2>My Skills</h2>  
-    <ul>
-        <li>Sketching</li>
-    </ul>
+        <ul>
+            <li>Sketching</li>
+        </ul>
     <h2>Favorite Quotes</h2>
     <p>"memento mori"</p>
-    <p></p>
+    <p>“It’s going to be legen—wait for it—dary.”</p>
 
     <h2>Link To my Github</h2>
     <a href="https://github.com/dexterPamittan23" class="center-link" target="_blank">Visit my Github account</a>
 
 </body> 
-
 </html>
