--- a/task3.html
+++ b/task3.html
@@ -32,7 +32,7 @@
     <p>“It’s going to be legen—wait for it—dary.”</p>
 
     <h2>Link To my Github</h2>
-    <a href="https://github.com/dexterPamittan23" class="center-link" target="_blank">Visit my Github account</a>
+    <a href="https://github.com/dexterPamittan23" class="center-link" target="_blank">Click here to visit</a>
 
 </body> 
 </html>
