--- a/enter.html
+++ b/enter.html
@@ -7,6 +7,7 @@
     <title>Bombarasclant</title>
 </head>
 <body>
+    <div class="Container">     
     <label for="username">Enter your username</label>
     <input type="text" id="username" name="username">
     <br><br>
@@ -35,6 +36,7 @@
     <label for="Description">Description:</label>
     <br>
     <textarea name="Description" id="TextArea" placeholder="Put it in" style="height: 150px; width:300px;"></textarea>
+    </div>
 
 </body>
 </html>
